1、新增聚合开户删除账户的工具； 2、新增测开的练习文件

--- a/2022ui_autotest/readme
+++ b/2022ui_autotest/readme
@@ -83,3 +83,5 @@ pytest_ini文件
 ;python_classes = Test*
 ;python_functions = test_*
 ;
+
+安装包：pip install  requests -i http://pypi.douban.com/simple/ --trusted-host pypi.douban.com
